refactor by comment